# bodmas-model

./: .gitignore  .gitmodules  CLAUDE.md  HANDOFF.md  README.md  app.py  dag.py  formal_policy.py  learner.py  misconceptions.py  package-lock.json  package.json  parser.py  pattern_matcher.py  patterns.py  rules.py  test_dag.py  test_formal_policy.py  test_rules.py  traces.py  valid_actions.py
PreReg/: prereg.tex
Results_combined/: results.tex
analysis-Bayesian/: b_item_marginals.json  make_synthetic_subdiv_item.py  plot_bayes_1misc_distributions.py  plot_bayes_1misc_heatmap.py  plot_bayes_1misc_marginals.py  plot_bayes_2misc_heatmap.py  synthetic_items.json
analysis-comparison/: plot_observer_scatter.py
analysis_human/: analyze_human.py  plot_2misc_heatmap.py  plot_2misc_heatmap_dots.py  plot_human_1misc_distributions.py  plot_human_1misc_heatmap.py  plot_human_rt.py  plot_human_sdt.py
base-task/: app.py  distance.py  drop_ambiguous.py  extend_pool.py  generator.py  inference.py  make_human_practice_items.py  make_practice_examples.py  misconception_difficulty.json  parser.py  (+7 more)
llm_exp/: .env.example  .gitignore  README.md  make_llm_1misc_distributions.py  make_llm_1misc_heatmap.py  make_llm_2misc_heatmap.py  make_llm_2misc_heatmap_dots.py  make_llm_figures.py  make_llm_plots.py  pyproject.toml  run_synthetic_item.py
llm_exp/bodmas_llm/: __init__.py  bodmas_prompt.py  client.py  parse_results.py  run_pilot.py  sample_session.py  session.py
llm_exp/data/: practice_examples.json  stimulus_pool.json
llm_exp/report/: report.tex
llm_exp/tests/: test_prompt.py
(+46 files in other folders)
