[project]
name = "bodmas-llm-exp"
version = "0.1.0"
description = "LLM task-analog of the BODMAS misconception-detection judgment task (via OpenRouter)"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "tenacity>=8.2.0",
    "polars>=1.0.0",
    "pyarrow>=14.0.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bodmas_llm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
